# ottershipper

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: nightly.yml  release.yml  test.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/services/: application.rs  mod.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_initial_schema.sql
crates/db/src/: error.rs  lib.rs  models.rs
crates/db/src/repositories/: application.rs  mod.rs
crates/db/tests/: application_test.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  main.rs  mcp.rs  schemas.rs
crates/server/tests/: mcp_integration_test.rs
install/: install.sh
test/: test-install-local.sh
