[package]
name = "ottershipper-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace crates
ottershipper-db = { path = "../db" }

# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bollard.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
