[package]
name = "ottershipper-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace crates
ottershipper-core = { path = "../core" }

# Workspace dependencies
tokio.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
