[package]
name = "ottershipper-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ottershipper"
path = "src/main.rs"

[dependencies]
# Workspace crates
ottershipper-mcp = { path = "../mcp" }
ottershipper-core = { path = "../core" }
ottershipper-db = { path = "../db" }

# Workspace dependencies
tokio.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
