[package]
name = "ottershipper-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "ottershipper"
path = "src/main.rs"

[lib]
name = "ottershipper_server"
path = "src/lib.rs"

[dependencies]
# Workspace crates
ottershipper-core = { path = "../core" }
ottershipper-db = { path = "../db" }

# Workspace dependencies
tokio.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true

# Schema generation for MCP tools
schemars = "0.8"

[dev-dependencies]
tempfile = "3.15"
anyhow = "1.0"
rmcp = { workspace = true, features = ["client"] }
